# AstroRF-Net

./: .gitignore  Gene_importance_3Celltype_233gene_mean.xlsx  README.md  net.params  pyproject.toml  requirements.txt
example/: example.py
python/: cli.py  core.py  pipeline.py  preprocess.py
src/astrorfnet/: __init__.py  _init.py  _init_.py  cli.py  model.py  pipeline.py  preprocess.py
