[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrorfnet"
version = "0.1.0"
description = "AstroRF-Net: classifier for Astrocyte / Glioblast / Radial-Glial on AnnData"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
  "anndata>=0.10",
  "numpy>=1.24",
  "pandas>=1.5",
  "scipy>=1.10",
  "torch>=2.0",
  "skorch>=0.15",
  "openpyxl>=3.1"
]

# 生成命令行：安装后可直接用 `astrorfnet ...`
[project.scripts]
astrorfnet = "astrorfnet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["astrorfnet*"]
